objects/Day__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Week__c</fullName>
        <label>Calendar Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <label>Calendar Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Days</relationshipLabel>
        <relationshipName>Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Day Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Day_Number__c</fullName>
        <label>Day Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_Type__c</fullName>
        <label>Day Type</label>
        <picklist>
            <picklistValues>
                <fullName>Working Day</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Working Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Day</label>
    <nameField>
        <label>Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>